RESOLVED FIXED91656
Previous API changes to Webframe causes failures in certain apps
https://bugs.webkit.org/show_bug.cgi?id=91656
Summary Previous API changes to Webframe causes failures in certain apps
Roger Fong
Reported 2012-07-18 12:50:12 PDT
Changes to the resumeAnimations and suspendAnimations methods in WebFrame causes certain apps to crash because of inconsistencies in the COM interface. The counterValueByElementId method was also removed. However, for all of these methods, no method stubs were added where appropriate after removal. Re-adding resume and suspend methods back into WebFrame API and adding unused method stub for counterValueByElementId. resumeAnimations: http://trac.webkit.org/changeset/116729 suspendAnimations: http://trac.webkit.org/changeset/116610 counterValueByElementId: http://trac.webkit.org/changeset/120054
Attachments
Patch to re add in API changes to WebFrame that previously made dependent apps crash (9.37 KB, patch)
2012-07-19 16:27 PDT, Roger Fong
no flags
Rolled back previous cleanliness changes (3.98 KB, patch)
2012-07-20 12:25 PDT, Roger Fong
no flags
Forgot to get rid of "Radar: " in changelog of previous patch (3.97 KB, patch)
2012-07-20 17:59 PDT, Roger Fong
jhoneycutt: review+
Fixed grammar in changelog (3.97 KB, patch)
2012-07-25 16:01 PDT, Roger Fong
no flags
Radar WebKit Bug Importer
Comment 1 2012-07-18 12:55:38 PDT
Roger Fong
Comment 2 2012-07-18 13:26:00 PDT
Roger Fong
Comment 3 2012-07-19 16:27:09 PDT
Created attachment 153371 [details] Patch to re add in API changes to WebFrame that previously made dependent apps crash I also rearranged method definitions in WebFrame.h to match the idl file...though this wasn't necessary... I can roll those back if people want me too...
WebKit Review Bot
Comment 4 2012-07-19 16:29:41 PDT
Attachment 153371 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/win/ChangeLog', u'Source/Web..." exit_code: 1 Source/WebKit/win/WebFrame.h:243: The parameter name "element" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/win/WebFrame.h:280: The parameter name "rect" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 5 2012-07-19 16:36:26 PDT
(In reply to comment #3) > Created an attachment (id=153371) [details] > Patch to re add in API changes to WebFrame that previously made dependent apps crash > > I also rearranged method definitions in WebFrame.h to match the idl file...though this wasn't necessary... > I can roll those back if people want me too... I'm thinking that making the minimum necessary change is probably best.
Tim Horton
Comment 6 2012-07-19 16:38:00 PDT
Comment on attachment 153371 [details] Patch to re add in API changes to WebFrame that previously made dependent apps crash View in context: https://bugs.webkit.org/attachment.cgi?id=153371&action=review > Source/WebKit/win/ChangeLog:11 > + Changes to the WebFrame API causes certain apps to crash because of inconsistencies in the COM interface. > + The resumeAnimations and suspendAnimations are removed, which are still needed. > + The counterValueByElementId method was also removed, although is not needed there. > + However, for all of these methods, no method stubs were added where appropriate after removal. > + > + https://bugs.webkit.org/show_bug.cgi?id=91656 > + Radar: <rdar://problem/11904605> > + > + Reviewed by NOBODY (OOPS!). Format should be: <title> <bugzilla url> <radar url> <reviewed by> <long description> <file/change list> (i.e. remove the "Radar:" and move the long description below the reviewed by line). > Source/WebKit/win/ChangeLog:24 > + Rearranged ordering of methods of method definitions to match interface file. Ideally we'd do this in another patch (or not at all).
Roger Fong
Comment 7 2012-07-20 12:25:10 PDT
Created attachment 153563 [details] Rolled back previous cleanliness changes
Roger Fong
Comment 8 2012-07-20 12:25:38 PDT
and fixed changelog
Roger Fong
Comment 9 2012-07-20 17:59:40 PDT
Created attachment 153632 [details] Forgot to get rid of "Radar: " in changelog of previous patch
Jon Honeycutt
Comment 10 2012-07-25 15:57:27 PDT
Comment on attachment 153632 [details] Forgot to get rid of "Radar: " in changelog of previous patch View in context: https://bugs.webkit.org/attachment.cgi?id=153632&action=review r=me > Source/WebKit/win/ChangeLog:3 > + Changes to the WebFrame API causes dependent apps to crash. Typo: cause, not causes. > Source/WebKit/win/ChangeLog:9 > + Changes to the WebFrame API causes certain apps to crash because of inconsistencies in the COM interface. Same here.
Roger Fong
Comment 11 2012-07-25 16:01:06 PDT
Created attachment 154468 [details] Fixed grammar in changelog
Jon Honeycutt
Comment 12 2012-07-25 16:05:28 PDT
Comment on attachment 154468 [details] Fixed grammar in changelog r=me
WebKit Review Bot
Comment 13 2012-07-25 18:01:47 PDT
Comment on attachment 154468 [details] Fixed grammar in changelog Clearing flags on attachment: 154468 Committed r123688: <http://trac.webkit.org/changeset/123688>
WebKit Review Bot
Comment 14 2012-07-25 18:01:51 PDT
All reviewed patches have been landed. Closing bug.
Roger Fong
Comment 15 2012-07-25 18:04:41 PDT
Note You need to log in before you can comment on or make changes to this bug.